--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.paas.ref.task</groupId>
 	<artifactId>short-lived-ms</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>short-lived-ms</name>
 	<description>Demo project for Spring Boot</description>
